--- a/httpexam/index.html
+++ b/httpexam/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<title>Node.js Example</title>
+	<title>Node.js Example</title>
 </head>
 <body>
-	<H1>Send Data with POST Method</H1>
+	<H1>Send Data With POST Method</H1>
 	<form method="POST">
 		<table>
 			<tr>
-				<td><lable>Data A</lable></td>
+				<td><label>Data A</label></td>
 				<td><input type="text" name="data_a"/></td>
 			</tr>
 			<tr>
-				<td><lable>Data B</lable></td>
+				<td><label>Data B</label></td>
 				<td><input type="text" name="data_b"/></td>
 			</tr>
 		</table>
 		<input type="submit"/>
 	</form>
-
-</body> 
+</body>
 </html>
